refactor on structure, usage of public, starting static style

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,16 +1,19 @@
 <nav class="navbar">
-  <div class="logo">Tu Logo o Nombre</div>
-  <ul class="nav-links">
-    <li><a href="#"><box-icon name='home-alt' class="home-nav"></box-icon></a></li>
-    <li><a href="#"><box-icon type='solid' name='package' class="projects-nav"></box-icon></a></li>
-    <li><a href="#"><box-icon name='briefcase-alt-2' class="briefcase-nav"></box-icon></a></li>
-    <li><a href="#"><box-icon name='wrench' class="wrench-nav"></box-icon></a></li>
-  </ul>
+  <div class="nav-elements">
+    <div class="logo"><img src="maugal_.svg" alt="maugal_"></div>
+    <ul class="nav-links">
+      <li><a href="#"><box-icon name='home-alt' class="home-nav"></box-icon></a></li>
+      <li><a href="#"><box-icon type='solid' name='package' class="projects-nav"></box-icon></a></li>
+      <li><a href="#"><box-icon name='briefcase-alt-2' class="briefcase-nav"></box-icon></a></li>
+      <li><a href="#"><box-icon name='wrench' class="wrench-nav"></box-icon></a></li>
+    </ul>
+  </div>
 </nav>
+
 <section class="hero">
   <div class="background">
     <video autoplay muted loop id="bgVideo">
-      <source src="assets/final_video.mp4" type="video/mp4" />
+      <source src="final_video.mp4" type="video/mp4" />
     </video>
       <div class="hero-container">
         <div class="hero-left">
@@ -79,18 +82,6 @@
       </div>
       <div class="see-repo"><box-icon name='link-external'></box-icon></div>
     </div>
-    <div class="project">
-      <div class="image-bg">
-        <img src="" alt="" class="project2-img">
-      </div>
-      <h2 class="project-name">MoonHike</h2>
-      <p class="project-desc">MoonHike is a smart navigation app focused on safety, offering optimized routes, real-time risk analysis, and incident reporting. With features like incident reporting and dynamic location tracking, it empowers users to navigate securely while contributing to community safety.</p>
-      <div class="project-stack">
-        <div class="flutter"><box-icon name='flutter' type='logo' ></box-icon>Flutter</div>
-        <div class="firebase"><box-icon name='firebase' type='logo' ></box-icon>Firebase</div>
-      </div>
-      <div class="see-repo"><box-icon name='link-external'></box-icon></div>
-    </div>
 
     <div class="project">
       <div class="image-bg">
@@ -104,6 +95,6 @@
       </div>
       <div class="see-repo"><box-icon name='link-external'></box-icon></div>
     </div>
-
   </div>
+
 </section>
