--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,7 +35,7 @@
             Software engineering student with a passion for building great
             things. Currently a QA Automation Developer intern at Epicor.
           </h2>
-          <h4>Beyond my work, I'm interested in personal finance and investing. I also enjoy staying active through sports like tennis and hiking in 🇲🇽, and I love to unwind with music and video games. This portfolio is a look into my work and my hobbies.</h4>
+          <h4>Beyond my work, I'm interested in personal finance and investing. I also enjoy staying active through sports like tennis and hiking in <img src="mx.png" alt="MX" class="mx-flag">, and I love to unwind with music and video games. This portfolio is a look into my work and my hobbies.</h4>
           <button class="contact-me-hero">
             <span>Contact me! </span><box-icon name='paper-plane'></box-icon>
           </button>
