--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,10 +21,10 @@
         <div class="hero-left">
           <img src="temppic.jpg" alt="my profile pic" class="profile-pic" />
           <div class="socials">
-            <ul>
-              <li class="social"><box-icon name='linkedin-square' type='logo' ></box-icon><span>LinkedIn</span></li>
-              <li class="social"><box-icon type='logo' name='gmail'></box-icon><span>Email</span></li>
-              <li class="social"><box-icon name='github' type='logo' ></box-icon><span>GitHub</span></li>
+            <ul class="social-links">
+              <li class="social"><a href="https://www.linkedin.com/in/mauricio-gallegos-castillo-4b9503288/" target="_blank"><box-icon name='linkedin-square' type='logo' ></box-icon><span>LinkedIn</span></a></li>
+              <li class="social"><a href="mailto:mauricio.gallegoscast@gmail.com"><box-icon type='logo' name='gmail'></box-icon><span>Email</span></a></li>
+              <li class="social"><a href="https://github.com/maugalcst" target="_blank"><box-icon name='github' type='logo' ></box-icon><span>GitHub</span></a></li>
             </ul>
           </div>
         </div>
@@ -36,9 +36,11 @@
             things. Currently a QA Automation Developer intern at Epicor.
           </h2>
           <h4>Beyond my work, I'm interested in personal finance and investing. I also enjoy staying active through sports like tennis and hiking in <img src="mx.png" alt="MX" class="mx-flag">, and I love to unwind with music and video games. This portfolio is a look into my work and my hobbies.</h4>
-          <button class="contact-me-hero">
+          <a href="mailto:mauricio.gallegoscast@gmail.com">
+            <button class="contact-me-hero">
             <span>Contact me! </span><box-icon name='paper-plane'></box-icon>
           </button>
+          </a>
         </div>
       </div>
   </div>
