component work-card added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -110,5 +110,9 @@
     <video autoplay muted loop id="bgVideo2">
       <source src="final_video.mp4" type="video/mp4" />
     </video>
+
+    <app-work-card></app-work-card>
+    <app-work-card></app-work-card>
+    
   </div>
 </section>
