--- a/src/app/app.html
+++ b/src/app/app.html
@@ -111,8 +111,18 @@
       <source src="final_video.mp4" type="video/mp4" />
     </video>
 
-    <app-work-card></app-work-card>
-    <app-work-card></app-work-card>
+    <app-work-card
+    [companyName]="'Epicor'"
+    [companyDuration]="'Jun 2025 - Present'"
+    [jobPosition]="'QA Developer Intern'"
+    [jobDescription]="'As a QA Developer Intern at Epicor, I specialize in test automation using WebdriverIO. My focus is on building and maintaining robust testing frameworks to ensure high-quality, reliable software.'"
+    [technologies]="['WebdriverIO', 'Jiraa', 'Git', 'Zephyr', 'Azure DevOps']"></app-work-card>
+
+    <app-work-card
+    [companyName]="'Banorte'"
+    [companyDuration]="'Jun 2024 - Oct 2024'"
+    [jobPosition]="'Customer Support Agent'"
+    [jobDescription]="'I assisted clients with a wide range of inquiries, including mobile app assistance, investments, and fraud reports. My role involved providing effective solutions for a high volume of cases, which honed my skills in communication.'"></app-work-card>
     
   </div>
 </section>
