styling of video background for work experience

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -106,23 +106,22 @@
 <section class="work-experience">
   <div class="upper-light"></div>
   <h1 class="work-title">WORK <box-icon name='briefcase-alt-2' ></box-icon><br><span>EXPERIENCE</span></h1>
-  <div class="work-bg">
+  
+  <div class="work-bg-video">
     <video autoplay muted loop id="bgVideo2">
       <source src="final_video.mp4" type="video/mp4" />
     </video>
-
-    <app-work-card
-    [companyName]="'Epicor'"
-    [companyDuration]="'Jun 2025 - Present'"
-    [jobPosition]="'QA Developer Intern'"
-    [jobDescription]="'As a QA Developer Intern at Epicor, I specialize in test automation using WebdriverIO. My focus is on building and maintaining robust testing frameworks to ensure high-quality, reliable software.'"
-    [technologies]="['WebdriverIO', 'Jiraa', 'Git', 'Zephyr', 'Azure DevOps']"></app-work-card>
-
-    <app-work-card
-    [companyName]="'Banorte'"
-    [companyDuration]="'Jun 2024 - Oct 2024'"
-    [jobPosition]="'Customer Support Agent'"
-    [jobDescription]="'I assisted clients with a wide range of inquiries, including mobile app assistance, investments, and fraud reports. My role involved providing effective solutions for a high volume of cases, which honed my skills in communication.'"></app-work-card>
-    
+  </div>
+  
+  <div class="work-cards-container">
+    @for (job of workExperience; track job.companyName) {
+      <app-work-card 
+        [companyName]="job.companyName"
+        [companyDuration]="job.companyDuration"
+        [jobPosition]="job.jobPosition"
+        [jobDescription]="job.jobDescription"
+        [technologies]="job.technologies ?? []">
+      </app-work-card>
+    }
   </div>
 </section>
