--- a/src/app/app.css
+++ b/src/app/app.css
@@ -263,30 +263,29 @@ li, ul {
 
 
 .work-experience {
+    position: relative;
     background: linear-gradient(
         180deg,
-        #a4a4a4 0%,
-        #969696 100%
-    );
+        #141414 0%,
+        #080808 100%
+    ); 
     min-height: calc(100vh);
-    padding: 20px; 
+    padding: 120px; 
 }
 
-.work-bg {
-    position: relative; 
-    min-height: 500px; 
-    overflow: hidden; 
+.work-bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 0;
+  opacity: 40%;
 }
 
-.work-bg video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: auto;
-    z-index: 1;
-
-    display: none;
+.work-bg-video video {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: fill;
 }
-
