work-card component done

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -120,7 +120,8 @@
         [companyDuration]="job.companyDuration"
         [jobPosition]="job.jobPosition"
         [jobDescription]="job.jobDescription"
-        [technologies]="job.technologies ?? []">
+        [technologies]="job.technologies ?? []"
+        [companyLogo]="job.companyLogo ?? ''">
       </app-work-card>
     }
   </div>
