--- a/src/app/app.css
+++ b/src/app/app.css
@@ -281,7 +281,7 @@ li, ul {
     height: 100%;
     background: linear-gradient(
         180deg,
-        #141414 0%,
+        #0e0e0e 0%,
         #080808 100%
     );
     z-index: -2; /* Lo ponemos debajo del video */
@@ -294,7 +294,7 @@ li, ul {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  opacity: 40%;
+  opacity: 20%;
   z-index: -1;
 }
 
@@ -344,7 +344,7 @@ li, ul {
 }
 
 .work-cards-container {
-    background-color: #060606;
+    background-color: #06060639;
     backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px); 
     border: 1px solid #181818;
