--- a/src/app/app.html
+++ b/src/app/app.html
@@ -109,7 +109,7 @@
   
   <div class="work-bg-video">
     <video autoplay muted loop id="bgVideo2">
-      <source src="final_video2.mp4" type="video/mp4" />
+      <source src="video2.mp4" type="video/mp4" />
     </video>
   </div>
   
