ngClass added for bg work-card styles

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -117,6 +117,7 @@
     @for (job of workExperience; track job.companyName) {
       <app-work-card 
         [companyName]="job.companyName"
+        [cardTheme]="job.cardTheme ?? ''"
         [companyDuration]="job.companyDuration"
         [jobPosition]="job.jobPosition"
         [jobDescription]="job.jobDescription"
