--- a/src/app/components/work-card/work-card.html
+++ b/src/app/components/work-card/work-card.html
@@ -1,4 +1,4 @@
-<div class="job">
+<div class="job" [ngClass]="cardTheme">
     <div class="job-left">
         <div class="job-image-bg">
             @if (companyLogo) {
