--- a/src/app/app.css
+++ b/src/app/app.css
@@ -88,8 +88,7 @@ li, ul {
     justify-content: center;
     align-items: center;
     min-height: calc(100vh);
-    padding: 20px; 
-    
+    padding: 0px; 
 }
 
 .hero-container {
@@ -102,7 +101,6 @@ li, ul {
     backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px); 
     border: 1px solid rgba(218, 218, 218, 0.068);
-    
     display: flex;
     gap: 30px; 
     align-items: center; 
@@ -256,7 +254,25 @@ li, ul {
 
 
 .recent-projects {
-    background-color: aliceblue;
+    background-color: #06060682;
+    margin: 0;
+    padding: 120px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
+.rp-title {
+    margin: 0;
+    color: #ffffff;
+    font-weight: 900;
+    font-size: 36px;
+    
+}
+
+.rp-title box-icon {
+    fill: #ffffff;
+    transform: scale(1.5);
+    margin-left: 5px;
 }
 
 
@@ -318,6 +334,7 @@ li, ul {
     top: 0%;
     opacity: 80%;
     transform: translate(-50%, -50%);
+    z-index: -1;
 }
 
 .work-title {
