--- a/src/app/app.html
+++ b/src/app/app.html
@@ -48,14 +48,14 @@
 
 <section class="recent-projects">
   <h1 class="rp-title">RECENT <box-icon type='solid' name='package' class="projects-title"></box-icon><br></h1>
-  <h1 class="rp-title title-projects">PROJECTS</h1>
+  <h1 class="rp-title2">PROJECTS</h1>
   <div class="controls">
+    <button class="visitme-projects-button">Visit me! <box-icon type='logo' name='github' class="gh-projects"></box-icon></button>
+    <div class="controls-separator"></div>
     <div class="direction-buttons">
       <div class="left-arrow"><box-icon name='chevron-left'></box-icon></div>
       <div class="right-arrow"><box-icon name='chevron-right'></box-icon></div>
     </div>
-    <div class="controls-separator"></div>
-    <button class="visitme-projects-button">Visit me! <box-icon type='logo' name='github' class="gh-projects"></box-icon></button>
   </div>
 
   <div class="shadow"></div>
@@ -71,31 +71,6 @@
       </app-project-card>
     }
 
-    <div class="project">
-      <div class="image-bg">
-        <img src="" alt="" class="project2-img">
-      </div>
-      <h2 class="project-name">MoonHike</h2>
-      <p class="project-desc">MoonHike is a smart navigation app focused on safety, offering optimized routes, real-time risk analysis, and incident reporting. With features like incident reporting and dynamic location tracking, it empowers users to navigate securely while contributing to community safety.</p>
-      <div class="project-stack">
-        <div class="flutter"><box-icon name='flutter' type='logo' ></box-icon>Flutter</div>
-        <div class="firebase"><box-icon name='firebase' type='logo' ></box-icon>Firebase</div>
-      </div>
-      <div class="see-repo"><box-icon name='link-external'></box-icon></div>
-    </div>
-
-    <div class="project">
-      <div class="image-bg">
-        <img src="" alt="" class="project2-img">
-      </div>
-      <h2 class="project-name">San Patricio Ecomme</h2>
-      <p class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-      <div class="project-stack">
-        <div class="javascript"><box-icon name='javascript' type='logo' ></box-icon>JavaScript</div>
-        <div class="postgresql"><box-icon name='postgresql' type='logo' ></box-icon>PostgreSQL</div>
-      </div>
-      <div class="see-repo"><box-icon name='link-external'></box-icon></div>
-    </div>
   </div>
 
 </section>
