--- a/src/app/app.css
+++ b/src/app/app.css
@@ -252,7 +252,7 @@ li, ul {
 
 
 .recent-projects {
-    background-color: #06060682;
+    background-color: #090909;
     margin: 0;
     padding: 120px;
     padding-left: 150px;
