--- a/src/app/app.html
+++ b/src/app/app.html
@@ -46,12 +46,16 @@
   </div>
 </section>
 
-<div class="shadow"></div>
+
 <section class="recent-projects">
+<div class="shadow-container"></div>
   <h1 class="rp-title">RECENT <box-icon type='solid' name='package' class="projects-title"></box-icon><br></h1>
   <h1 class="rp-title2">PROJECTS</h1>
   <div class="controls">
-    <button class="visitme-projects-button">Visit me! <box-icon type='logo' name='github' class="gh-projects"></box-icon></button>
+    <a href="https://github.com/maugalcst" target="_blank" class="visitme-projects-button">
+      <p>Visit me! </p>
+      <box-icon type='logo' name='github' class="gh-projects"></box-icon>
+    </a>
     <div class="controls-separator"></div>
     <div class="direction-buttons">
       <div class="left-arrow"><box-icon name='chevron-left'></box-icon></div>
@@ -71,7 +75,7 @@
     }
 
   </div>
-
+  <div class="white-line"></div>
 </section>
 
 <section class="work-experience">
