--- a/src/app/components/project-card/project-card.html
+++ b/src/app/components/project-card/project-card.html
@@ -12,5 +12,5 @@
             </div>
         }
         </div>
-        <div class="see-repo"><i class='bx bx-link-external'></i></div>
+        <a class="see-repo"><i class='bx bx-link-external'></i></a>
 </div>
