--- a/src/app/components/project-card/project-card.html
+++ b/src/app/components/project-card/project-card.html
@@ -1,5 +1,5 @@
 <div class="project">
-    <div class="image-bg">
+    <div class="image-bg" [ngClass]="projectTheme">
         <img [src]="projectImage" alt="epicor-image" class="project-img epicor-img">
     </div>
         <h2 class="project-name">{{ projectName }}</h2>
