--- a/src/app/components/project-card/project-card.css
+++ b/src/app/components/project-card/project-card.css
@@ -1,10 +1,17 @@
 .project {
+    position: relative;
     background-color: #0C0C0C;
     border: 1px solid #272727;
     border-radius: 25px;
     padding: 25px;
     margin-top: 30px;
     min-height: 42rem;
+    transition: background-color 0.3s;
+    transition: transform 0.3s;
+}
+
+.project:hover {
+    transform: translateY(5px);
 }
 
 .project-img {
@@ -18,6 +25,18 @@
     height: fit-content;
     width: auto;
     padding: 15px;
+}
+
+.gastrack-theme {
+  background: linear-gradient(360deg, #de600016 0%, #1011199d 100%) !important;
+}
+
+.moonhike-theme {
+  background: linear-gradient(360deg, #4e00de16 0%, #1414149d 100%) !important;
+}
+
+.sanpatricio-theme {
+  background: linear-gradient(360deg, #212b2316 0%, #0000009d 100%) !important;
 }
 
 .project-name, .project-desc { 
